
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.jboss.gatein.test</groupId>
        <artifactId>tests-parent</artifactId>
        <version>5.2.2-SNAPSHOT</version>
    </parent>
      <artifactId>My-UI-test</artifactId>
    <packaging>jar</packaging>

    <name>My UI test</name>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    
        <org.testng.testng.version>5.12.1</org.testng.testng.version>
        <org.jboss.gatein.helpers>${project.version}</org.jboss.gatein.helpers>
        
        <selenium.browser>firefox</selenium.browser>
        <selenium.timeout>10000</selenium.timeout>
        <selenium.host>localhost</selenium.host>
        <selenium.host.port>8080</selenium.host.port>
        <portal.path>/portal</portal.path>
        <https.flag>false</https.flag>
        <allowed.not.case.sensitive.search>false</allowed.not.case.sensitive.search>
        <screenshot>false</screenshot>
        <html_src>false</html_src>
        <testng.suite.file>testng.xml</testng.suite.file>
        <selenium.test.skip>false</selenium.test.skip>
        
        <cargo.timeout>240000</cargo.timeout>
<!--        <container.installer.url />
        <cargo.bundle.unzipped.folders />
        <cargo.jvmargs.additional />-->
    </properties>
    
    <!-- no tests by default -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.12</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
<!--
            <plugin>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <arguments>-Dselenium.test.skip=true -Dselenium.server.skip=true</arguments>
                    <tagBase>https://svn.devel.redhat.com/repos/jboss-qa/epp/ui-tests/tags/</tagBase>
                    <branchBase>https://svn.devel.redhat.com/repos/jboss-qa/epp/ui-tests/branches/</branchBase>
                </configuration>
            </plugin>
-->
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>selenium</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <source>1.5</source>
                            <target>1.5</target>
                        </configuration>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>surefire-tests</id>
                                <phase>integration-test</phase>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                                <configuration>
                                    <skip>${selenium.test.skip}</skip>
                                    <suiteXmlFiles>
                                        <suiteXmlFile>src/test/resources/${testng.suite.file}</suiteXmlFile>
                                    </suiteXmlFiles>
                                    <systemProperties>
                                        <property>
                                            <name>selenium.browser</name>
                                            <value>${selenium.browser}</value>
                                        </property>
                                        <property>
                                            <name>selenium.timeout</name>
                                            <value>${selenium.timeout}</value>
                                        </property>
                                        <property>
                                            <name>selenium.host</name>
                                            <value>${selenium.host}</value>
                                        </property>
                                        <property>
                                            <name>selenium.host.port</name>
                                            <value>${selenium.host.port}</value>
                                        </property>
                                        <property>
                                            <name>portal.path</name>
                                            <value>${portal.path}</value>
                                        </property>
                                        <property>
                                            <name>https.flag</name>
                                            <value>${https.flag}</value>
                                        </property>
                                        <property>
                                            <name>allowed.not.case.sensitive.search</name>
                                            <value>${allowed.not.case.sensitive.search}</value>
                                        </property>
                                        <property>
                                            <name>screenshot</name>
                                            <value>${screenshot}</value>
                                        </property>
                                        <property>
                                            <name>html-src</name>
                                            <value>${html_src}</value>
                                        </property>                                    
                                        <property>
                                            <name>output-dir</name>
                                            <value>${project.build.directory}/screenshots</value>
                                        </property>
                                    </systemProperties>
                                    <properties>
                                        <property>
                                            <name>listener</name>
                                            <value>org.jboss.test.selenium.listener.ConsoleStatusTestListener,org.jboss.gatein.selenium.TestMethodSelector,org.jboss.gatein.selenium.TestCaseFailListener</value>
                                        </property>
                                    </properties>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        
        <!--  Container Profile -->
        <profile>
            <id>container</id>
            <activation>
                <property>
                    <name>containerId</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.cargo</groupId>
                        <artifactId>cargo-maven2-plugin</artifactId>
                        <version>1.0.2</version>
                        <executions>
                            <execution>
                                <id>start-container</id>
                                <phase>pre-integration-test</phase>
                                <goals>
                                    <goal>start</goal>
                                </goals>
                            </execution>
							<!--
								Stop is done by jboss-maven-plugin <execution>
								<id>stop-container</id> <phase>post-integration-test</phase>
								<goals> <goal>stop</goal> </goals> </execution>
							-->
                        </executions>
                        <configuration>
                            <wait>false</wait>
                            <container>
                                <containerId>${containerId}</containerId>
                                <append>false</append>
                                <zipUrlInstaller>
                                    <url>${container.installer.url}</url>
                                    <installDir>${project.build.directory}/installs</installDir>
                                </zipUrlInstaller>
                                <home>${project.build.directory}/installs/${cargo.bundle.unzipped.folders}</home>
                                <timeout>${cargo.timeout}</timeout>
                            </container>
                            <configuration>
                                <properties>
                                    <cargo.hostname>${selenium.host}</cargo.hostname>
                                    <cargo.jvmargs>-Xms1303m -Xmx1303m -XX:MaxPermSize=256m -Dorg.jboss.resolver.warning=true -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000 -Dsun.lang.ClassLoader.allowArraySyntax=true -Dexo.conf.dir.name=gatein ${cargo.jvmargs.additional}</cargo.jvmargs>
                                </properties>
                            </configuration>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        
        <!-- Container: JBoss AS 5.X -->
        <profile>
            <id>container-jboss5x</id>
            <activation>
                <property>
                    <name>containerId</name>
                    <value>jboss5x</value>
                </property>
            </activation>
            <properties>
                <container.home>${project.build.directory}/installs/${cargo.bundle.unzipped.folders}</container.home>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.cargo</groupId>
                        <artifactId>cargo-maven2-plugin</artifactId>
                        <version>1.0.2</version>
                        <configuration>
                            <configuration>
                                <type>existing</type>
                                <home>${container.home}/server/default</home>
                                <properties>
                                    <cargo.jboss.configuration>default</cargo.jboss.configuration>
                                    <cargo.rmi.port>1099</cargo.rmi.port>
                                </properties>
                            </configuration>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>jboss-maven-plugin</artifactId>
                        <version>1.4</version>
                        <executions>
                            <execution>
                                <id>stop-container</id>
                                <phase>post-integration-test</phase>
                                <goals>
                                    <goal>stop</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <jbossHome>${container.home}</jbossHome>
                            <serverName>default</serverName>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>container-jboss5x-installation</id>
            <activation>
                <property>
                    <name>containerId</name>
                    <value>jboss5x</value>
                </property>
            </activation>
            <properties>
                <container.version>5.1.0.GA</container.version>
                <container.installer.url>${cargo.bundle.installer.url}</container.installer.url>
            </properties>
        </profile>
    </profiles>
    
    <dependencies>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${org.testng.testng.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.jboss.gatein.test</groupId>
            <artifactId>epp-ui-helpers</artifactId>
            <version>${org.jboss.gatein.helpers}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.test</groupId>
            <artifactId>richfaces-selenium</artifactId>
            <version>1.5.3.Final</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-api</artifactId>
            <version>2.25.0</version>
            <type>jar</type>
        </dependency>
    </dependencies>
</project>
